# NDE_NARRATIVES_ANALYSIS

./: .gitignore  PR_DESCRIPTION.md  PR_PREPROCESSING.md  PR_PROMPT_VARIANT_OUTPUT_DIR.md  README.md  Stories_vs_Surveys.mov  pyproject.toml
config/: paths.example.toml  study.toml
docs/: README.md  annotation_guidelines.md  benchmark_workflow.md  llm_workflow.md  local_demo.md  output_contract.md  proposal.md
prompts/: aftereffects_prompt.md  context_prompt.md  experience_prompt.md
prompts/analysis/: aftereffects_prompt.md  context_prompt.md  experience_prompt.md
prompts/benchmark/: sentiment_prompt.md
prompts/preprocessing/: resegment_narrative_prompt.md  translate_prompt.md  validate_sections_prompt.md
schemas/: aftereffects_output.schema.json  context_output.schema.json  experience_output.schema.json  preprocess_resegmentation_output.schema.json  preprocess_translate_output.schema.json  preprocess_validation_output.schema.json
src/nde_narratives/: __init__.py  benchmark.py  cli.py  compare_evaluation_outputs.py  config.py  constants.py  evaluation.py  evaluation_report.py  excel.py  human_review_compare.py  interactive.py  io_utils.py  llm_runner.py  local_demo.py  preprocessing.py  preprocessing_translate.py  (+4 more)
tests/: cli_helpers.py  test_cli.py  test_cli_benchmark.py  test_cli_config_and_build.py  test_cli_evaluate.py  test_cli_sentiment.py  test_cli_uncertainty.py  test_evaluation_report.py  test_human_review_compare.py  test_interactive.py  test_llm_bedrock.py  test_llm_runner.py  test_local_demo.py  test_preprocessing.py  test_translate.py
(+12 files in other folders)
