[build-system]
requires = ["setuptools>=69", "wheel"]
build-backend = "setuptools.build_meta"
[project]
name = "nde-narratives-analysis"
version = "0.1.0"
description = "CLI tools for structured coding and evaluation of Near-Death Experience narratives."
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
  "numpy>=1.26,<3",
  "openpyxl>=3.1,<4",
  "pandas>=2.2,<3",
]
[project.optional-dependencies]
dev = [
  "pytest>=8.0,<9",
]
[project.scripts]
nde = "nde_narratives.cli:main"
[tool.setuptools]
package-dir = {"" = "src"}
[tool.setuptools.packages.find]
where = ["src"]
[tool.pytest.ini_options]
testpaths = ["tests"]
